---
source: tpch.sqltest
expression: |-
  select
          sum(l_extendedprice * l_discount) as revenue
      from
          lineitem
      where
          l_shipdate >= '1994-01-01'
          and l_shipdate < '1995-01-01'
          and l_discount between 0.08 - 0.01 and 0.08 + 0.01
          and l_quantity < 24;
info:
  statement_type: SELECT
  tables:
  - lineitem
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN lineitem

BYTECODE
addr  opcode       p1  p2  p3  p4                                     p5  comment
   0  Init          0  22   0                                          0  Start at 22
   1  Null          0   2   0                                          0  r[2]=NULL
   2  OpenRead      0  10   0  k(17,B,B,B,B,B,B,B,B,B,B,B,B,B,B,B,B)   0  table=lineitem, root=10, iDb=0
   3  Rewind        0  18   0                                          0  Rewind table lineitem
   4    Column      0  10   4                                          0  r[4]=lineitem.l_shipdate
   5    Lt          4   5  17  Binary                                  0  if r[4]<r[5] goto 17
   6    Column      0  10   7                                          0  r[7]=lineitem.l_shipdate
   7    Ge          7   8  17  Binary                                  0  if r[7]>=r[8] goto 17
   8    Column      0   6   9                                          0  r[9]=lineitem.l_discount
   9    Gt         10   9  17  Binary                                  0  if r[10]>r[9] goto 17
  10    Gt          9  13  17  Binary                                  0  if r[9]>r[13] goto 17
  11    Column      0   4  17                                          0  r[17]=lineitem.l_quantity
  12    Ge         17  18  17  Binary                                  0  if r[17]>=r[18] goto 17
  13    Column      0   5  20                                          0  r[20]=lineitem.l_extendedprice
  14    Column      0   6  21                                          0  r[21]=lineitem.l_discount
  15    Multiply   20  21  19                                          0  r[19]=r[20]*r[21]
  16    AggStep     0  19   2  sum                                     0  accum=r[2] step(r[19])
  17  Next          0   4   0                                          0
  18  AggFinal      0   2   0  sum                                     0  accum=r[2]
  19  Copy          2   1   0                                          0  r[1]=r[2]
  20  ResultRow     1   1   0                                          0  output=r[1]
  21  Halt          0   0   0                                          0
  22  Transaction   0   1   8                                          0  iDb=0 tx_mode=Read
  23  String8       0   5   0  1994-01-01                              0  r[5]='1994-01-01'
  24  String8       0   8   0  1995-01-01                              0  r[8]='1995-01-01'
  25  Real          0  11   0  0.08                                    0  r[11]=0.08
  26  Real          0  12   0  0.01                                    0  r[12]=0.01
  27  Subtract     11  12  10                                          0  r[10]=r[11]-r[12]
  28  Real          0  14   0  0.08                                    0  r[14]=0.08
  29  Real          0  15   0  0.01                                    0  r[15]=0.01
  30  Add          14  15  13                                          0  r[13]=r[14]+r[15]
  31  Integer      24  18   0                                          0  r[18]=24
  32  Goto          0   1   0                                          0
